(4.2.5p232-RC) 2009/10/14 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1302] OpenSSL under Windows needs applink support.
* [Bug 1337] fix incorrect args to setsockopt(fd, IP_MULTICAST_IF,...).
* [Bug 1339] Fix Windows-only ntp_strerror() infinite recursion.
* [Bug 1341] NMEA driver requires working PPSAPI #ifdef HAVE_PPSAPI.
* Construct ntpd keyword scanner finite state machine at compile time
  rather than at runtime, shrink entries from 40+ to 8 bytes.
* Update documentation for ntpq --old-rv, saveconfig, saveconfigdir,
  ntpd -I -L and -M, and interface/nic rules. (From Dave Hart)
(4.2.5p231-RC) 2009/10/10 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1335] Broadcast client degraded by wildcard default change.
(4.2.5p230-RC) 2009/10/09 Released by Harlan Stenn <stenn@ntp.org>
* Start the 4.2.6 Release Candidate cycle.
* Broadcast and transit phase cleanup from Dave Mills.
(4.2.5p229) 2009/10/07 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1334] ntpsnmpd undefined reference to `ntpqOptions'.
* Change ntpsnmpd/Makefile.am include file order to fix FreeBSD build.
(4.2.5p228) 2009/10/06 Released by Harlan Stenn <stenn@ntp.org>
* Reclaim syntax tree memory after application in ntpd built with
  configure --disable-saveconfig.
* [Bug 1135] ntpq uses sizeof(u_long) where sizeof(u_int32) is meant.
* [Bug 1333] ntpd --interface precedence over --novirtualips lost.
(4.2.5p227) 2009/10/05 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1135] :config fails with "Server disallowed request"
* [Bug 1330] disallow interface/nic rules when --novirtualips or
  --interface are used.
* [Bug 1332] ntpq -c 'rv 0 variablename' returns extra stuff.
* Add test of ntpd --saveconfigquit fidelity using new complete.conf.
* Documentation updates from Dave Hart/Dave Mills.
(4.2.5p226) 2009/10/04 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1318] Allow multiple -g options on ntpd command line.
* [Bug 1327] ntpq, ntpdc, ntp-keygen -d & -D should work with configure